# mfpic

./: .clang-tidy  .gitignore  CMakeLists.txt  INSTALL.md  LICENSE.md  README.md
.github/workflows/: build-and-test.yml
doc/: EulerPlasmaModels.md  EulerPoissonFullyDiscreteSystem.md  EulerPoissonSpatialDiscretization.md  EulerPoissonTemporalDiscretization.md  InputDeck.md
end_to_end_tests/: CMakeLists.txt
end_to_end_tests/sheath/: CMakeLists.txt  sheath.py
end_to_end_tests/sod_shock_tube/: CMakeLists.txt  euler.py  read_mesh_data.py  sod_shock_tube.py  species.py
end_to_end_tests/twostream_instability/: CMakeLists.txt  twostream_instability.py
libmfpic/: AbsorbingParticleBoundary.cpp  AbsorbingParticleBoundary.hpp  AbsorbingParticleBoundary.test.cpp  BuildOutputParametersFromYaml.cpp  BuildOutputParametersFromYaml.hpp  BuildOutputParametersFromYaml.test.cpp  BuildParticleBoundariesFromYaml.cpp  BuildParticleBoundariesFromYaml.hpp  BuildParticleBoundariesFromYaml.test.cpp  BuildParticlesFromYaml.hpp  BuildParticlesFromYaml.test.cpp  BuildSpeciesMapFromYaml.cpp  BuildSpeciesMapFromYaml.hpp  BuildSpeciesMapFromYaml.test.cpp  CMakeLists.txt  ConjugateGradientLinearSolver.cpp  ConjugateGradientLinearSolver.hpp  ConjugateGradientLinearSolver.test.cpp  Constants.hpp  DGAssembly.cpp  DGAssembly.hpp  DGEulerAssembly.cpp  DGEulerAssembly.hpp  DGEulerAssembly.test.cpp  DGEulerBoundaryConditions.hpp  DGEulerBoundaryConditions.test.cpp  DGEulerBoundaryConditionsFactory.cpp  DGEulerBoundaryConditionsFactory.hpp  DGEulerBoundaryConditionsFactory.test.cpp  DGEulerInitialConditionsFactory.cpp  DGEulerInitialConditionsFactory.hpp  DGEulerInitialConditionsFactory.test.cpp  DGEulerKEIntegrator.hpp  DGEulerMaxwellSourceIntegrator.hpp  DGEulerOperations.cpp  DGEulerOperations.hpp  DGEulerOperations.test.cpp  DGEulerOperationsFactory.cpp  DGEulerOperationsFactory.hpp  DGEulerOperationsFactory.test.cpp  (+81 more)
mfpic/: CMakeLists.txt  mfpic.cpp
spack_repo/mfpic/: repo.yaml
